fix(virtualization): fix vertical scroll and grid overflow
The vertical scroll was not showing correctly in some browsers, and the
grid was the header content.

--- a/src/core/styles/components/grid/_grid-theme.scss
+++ b/src/core/styles/components/grid/_grid-theme.scss
@@ -102,13 +102,13 @@ $components: register-component($components, #{$component-name});
 
     %grid-display {
         display: grid;
-        grid-template-rows: min-content;
+        grid-template-rows: auto auto auto;
         background: $grid-bg;
         color: $grid-cell-color;
         border-radius: $grid-br;
         box-shadow: $grid-shadow;
         outline-style: none;
-        overflow: visible;
+        overflow: hidden;
     }
 
     %grid-caption {
